--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI (Continuous Integraion)
+name: CI (Continuous Integration)
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
     - name: Install Dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: |
-        npm ci --legacy-peer-deps
+        npm ci
 
     - name: Create .env development for CI
       run: |
@@ -44,6 +44,6 @@ jobs:
     - name: send FRONTEND_TEST_FINISH_TRIGGER
       run: |
         curl -S -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
-              -H 'Accept: application/vnd.github.v3+json' \
-              -u ${{ secrets.GHCR_TOKEN }} \
-              -d '{"event_type": "FRONTEND_TEST_FINISH_TRIGGER", "client_payload": {"repository": "'"$GITHUB_REPOSITORY"'" }}'
+          -H 'Accept: application/vnd.github.v3+json' \
+          -u ${{ secrets.GHCR_TOKEN }} \
+          -d '{"event_type": "FRONTEND_TEST_FINISH_TRIGGER", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
