--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -77,5 +77,17 @@ jobs:
     runs-on: [ self-hosted, deploy-tcp-frontend ]
     steps:
       - name: Deploy to Production
-        run: |
-          echo "ready for deploy"
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.HOST_IP }}
+          username: ec2-user
+          key: ${{ secrets.PRIVATE_KEY }}
+          script_stop: true
+          script: |
+            cd tcp/vue-frontend
+            cp -r /home/ec2-user/tcp/actions-frontend/dist/* ./html/
+
+            docker image prune -f
+            docker logout
+
+            docker-compose up -d
