--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -76,6 +76,15 @@ jobs:
     needs: build
     runs-on: [ self-hosted, deploy-tcp-frontend ]
     steps:
+      #   - name: Setup SSH
+      #   uses: webfactory/ssh-agent@v0.5.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.PRIVATE_KEY }}
+
+      # - name: Add Github Actions IP to Security Group
+      #   run: |
+      #     aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+      
       - name: Deploy to Production
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -92,7 +101,15 @@ jobs:
 
             docker-compose up -d
 
-      - name: SSH Agent Cleanup
+      # - name: Remove Github Actions IP From Security Group
+      #   run: |
+      #     aws ec2 revoke-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+
+      # - name: SSH Agent Cleanup
+      #   if: ${{ always() }}
+      #   uses: webfactory/ssh-agent@v0.5.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.PRIVATE_KEY }}
         if: ${{ always() }}
         uses: webfactory/ssh-agent@v0.5.0
         with:
