fix: [한재혁] docker-compose.yml 오타 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: "nginx:latest"
     container_name: frontend-deploy-nginx
     restart: unless-stopped
-    volumns:
+    volumes:
       - /home/ec2-user/tcp/vue-frontend/conf:/etc/nginx/conf.d
       - /home/ec2-user/tcp/vue-frontend/html:/usr/share/nginx/html
     ports:
