feat: [한재혁] AI 답변에 마크다운 문법 적용 [TCPV-21]

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.7.4",
     "core-js": "^3.8.3",
+    "markdown-it": "^14.1.0",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
